start button complete, but data-* attribute change not changing

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
             </div>
         </header>
         <main>
-            <H1>Coding Quiz Challenge</H1>
-            <p>Try to answer the following code-related questions within the time limit. Keep in mind that wrong answers will penalize your time/score by ten seconds!</p>
-            <button id = "start" type="button">Start Quiz
+            <H1 id="h1el">Coding Quiz Challenge</H1>
+            <p id="questions" data-state="one">Try to answer the following code-related questions within the time limit. Keep in mind that wrong answers will penalize your time/score by ten seconds!</p>
+            <ul id="answers">
 
+            </ul>
+            <button id = "start" type="button">Start Quiz
             </button>
 
 
@@ -31,7 +33,7 @@
 
 
 
-
+        <script src="./assets/script.js"></script>
 
     </body>
 
